MDEV-20263 sql_mode=ORACLE: BLOB(65535) should not translate to LONGBLOB